Add aditional fraud rules